--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "@adonisjs/framework": "^4.0.27",
     "@adonisjs/ignitor": "^1.0.14",
     "@adonisjs/lucid": "^4.0.22",
+    "@adonisjs/validator": "^4.0.7",
     "eslint": "^4.11.0",
     "mysql": "^2.15.0"
   },
